[tool.poetry]
package-mode = false
name = "planktoscope-segmenter"
description = "Data processor to segment objects from raw PlanktoScope data"
# For simplicity, we follow the definition of "Maintainer" from
# https://opensource.guide/how-to-contribute/#anatomy-of-an-open-source-project , which says:
# "Maintainers: Contributors who are responsible for driving the vision and managing the
# organizational aspects of the project".
# Here, we only list the current maintainers of the PlanktoScope backend software.
maintainers = ["Ethan Li <lietk12@gmail.com>"]
# For simplicity, we follow the definition of "Author" from
# https://opensource.guide/how-to-contribute/#anatomy-of-an-open-source-project , which says:
# "Author: The person/s or organization that created the project".
# Here, we only list the authors of the PlanktoScope backend software.
authors = ["Romain Bazile <romain@oceantrotter.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://www.planktoscope.org"
repository = "https://github.com/PlanktoScope/PlanktoScope/tree/main/segmenter"
documentation = "https://docs.planktoscope.community/"
keywords = ["planktoscope"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11.2,<4.0"
paho-mqtt = "^2.1.0"
numpy = "^2.3.3"
pandas = "^2.3.3"
loguru = "^0.7.3"
opencv-python-headless = "^4.6.0.66"
scikit-image = "^0.25.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.37.0"
mypy = "^1.18.1"
types-paho-mqtt = "^1.6.0.20240106"
ruff = "^0.13.0"

[tool.ruff]
line-length = 100

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
# We are gradually introducing type-checking as we rewrite each module; we have to rewrite some
# modules before we can enable these flags:
# disallow_untyped_calls = true
# disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[tool.poe.tasks]
fmt = "ruff format"
lint-mypy = "mypy ."
lint-ruff = "ruff check"
lint = ["lint-ruff"]
fmt-check = "ruff format --check"
check = ["fmt-check", "lint"]
